# AdventOfCode2018

day01/: day01.cabal
day01/src/: Main.hs
day02/: day02.cabal
day02/src/: Main.hs
day03/: day03.cabal
day03/src/: Main.hs
day04/: day04.cabal
day04/src/: Main.hs
day05/: day05.cabal
day05/src/: Main.hs
day06/: day06.cabal
day06/src/: Main.hs
day07/: 2  day07.cabal
day07/src/: Main.hs
day08/: day08.cabal
day08/src/: Main.hs
day09/: day09.cabal
day09/src/: Main.hs
day10/: day10.cabal
day10/src/: Main.hs
day11/: day11.cabal  stack.yaml
day11/src/: Main.hs
day12/: day12.cabal
day12/src/: Main.hs
